--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Ankit Prajapati (prajapati.ankit5@yahoo.com)",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.1"
   },
   "devDependencies": {
