--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "mongodb": "^2.2.31"
   },
   "devDependencies": {
     "mocha": "^4.0.0"
