--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Ankit Prajapati (prajapati.ankit5@yahoo.com)",
   "license": "MIT",
   "dependencies": {
+    "angular": "^1.6.6",
+    "angular-route": "^1.6.6",
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
     "mongodb": "^2.2.31",
