--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-jwt": "^0.1.9",
     "angular-route": "^1.6.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
